# omu.py

./: pyproject.toml  run_client.py  run_server.py
omu/: __init__.py
omu/client/: client.py  omuclient.py
omu/connection/: __init__.py  address.py  websocket_connection.py  websockets_connection.py
omu/endpoint/: endpoint.py  http_endpoint.py
omu/event/: __init__.py  event.py  event_registry.py  events.py
omu/extension/: __init__.py  extension.py  extension_registry.py
omu/extension/chat/: chat_extension.py
omu/extension/endpoint/: __init__.py  endpoint.py  endpoint_extension.py
omu/extension/registry/: registry_extension.py
omu/extension/server/: server_extension.py
omu/extension/table/: __init__.py  table.py  table_extension.py
omu/interface/: model.py  serializable.py
omuchat/: __init__.py  omuchat.py
omuchat/chat/: __init__.py  chat_extension.py
omuchat/client/: client.py  omuclient.py
omuchat/connection/: connection.py  websocket_connection.py
omuchat/endpoint/: __init__.py  endpoint.py  http_endpoint.py
omuchat/event/: __init__.py  event.py  event_registry.py  events.py
omuchat/extension/: extension.py  extension_registry.py
omuchat/extension/chat/: chat_extension.py
omuchat/extension/table/: table.py  (+1 more)
omuchat/interface/: serializer.py
omuserver/: fastapi_server.py  server.py
omuserver/event/: __init__.py  event_registry.py
omuserver/extension/: __init__.py  extension.py
omuserver/network/: __init__.py  fastapi_network.py  network.py
omuserver/session/: session.py  websocket_session.py
src/omuchat/: __init__.py
(+47 files in other folders)
