[project]
name = "omuchat"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "am230", email = "111672334+am230@users.noreply.github.com" }]
dependencies = [
    "pydantic>=2.5.2",
    "websockets>=12.0",
    "loguru>=0.7.2",
    "httpx>=0.25.2",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-python = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
